css/custom.css
/* this class is added to header entries to prevent the background and line
   under the header to be shown.
*/
.index-entry {
    border-bottom: 0px solid #000000;
    background: transparent;
    margin-top: 0.2em;
    margin-bottom: 0.1em;
}

h1,h2,h3,h4,h5,h6 {
    font-family: 'Roboto Condensed',Georgia,"Times New Roman",Times,sans-serif;
}

h2,h3,h4,h5,h6 {
    border-bottom: 1px solid #6c7b8b;
    /* background: #fffff0 */
}

h1 {
    margin-top: 1.0em;
    margin-bottom: 1.0em;
}

h2 {
    margin-top: 1.0em;
    margin-bottom: 0.8em;
}

h3 {
    margin-top: 1.0em;
    margin-bottom: 0.6em;
}

a {
    color: #4682b4;
}

a:hover {
    color: #4682b4;
}

body {
    font-size: 18px;
    font-family: Roboto,Georgia,"Times New Roman",Times,sans-serif;
    color: #333333
}

.date-and-tags {
    font-size: 14px;
    color: #777777
}

/* When highlighted code blocks are too wide, they wrap. Resulting in the line
   numbers column's rows not lining up with the code rows. Prevent
   wrapping. */
pre {
    white-space: pre;
    width: inherit;
    font-size: 16px;
    font-family: 'Roboto Mono',Menlo,Monaco,Consolas,Courier,monospace;
}

code {
    white-space: pre;
    width: inherit;
    font-size: 16px;
    font-family: 'Roboto Mono',Menlo,Monaco,Consolas,Courier,monospace;
}

.figure {
    height: auto;
    display: block;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    margin-left: auto;
    margin-right: auto;
}

/*
.caption {
    font-size: 9px;
    color: #777777;
    text-align: center;
}
*/

.caption {
    display: none;
}

/* Make sure that images within blog articles never take more width than the
   article width; `height: auto` ensures the height is also resized
   proportionally.

   This is useful given that Markdown itself gives you little control over
   image resizing, and in particular no way to achieve this "best fit"
   behavior.
*/
article img {
    max-width: 80%;
    height: auto;
    display: block;
    margin: 0 auto;
}

/* for some strange reason, the next,prev icons are white on a white
   background, so we invert them to black. */
.carousel-control-next-icon,.carousel-control-prev-icon {
    filter: invert(100%);
}

/* Make the tables take 90% of the width of the article and center them. */
.table-responsive {
    max-width: 90%;
    margin: auto;
}

.sourcetable {                          /* these are the code blocks */
    max-width: 100%;
    min-width: 100%;
    margin-left: 1em;
}

.gap-right {
    margin-right: 40px;
    margin-bottom: 40px;
}

blockquote {
    max-width: 90%;
    background: #f9f9f9;
    border-left: 10px solid #ccc;
    margin: 1.5em 10px;
    padding: 0.5em 10px;
}

.zoom-on-hover {
    overflow: visible;
}

.zoom-on-hover img {
    transition: all 0.2s ease;
}

.zoom-on-hover:hover img {
    transform: scale(1.1);
}

.index-entry {
    margin-top: 20px;
}

footer {
    margin-top: 40px;
    margin-bottom: 40px;
}

.fine-print {
    text-align: right;
    font-size: small;
    margin-bottom: 40px;
}


/*............................................................... OOT ....*/

/** Table of contents CSS objects, based off
 * https://github.com/teesloane/ootliner, adapted to match the look-and-feel
 * of this blog.
 */

.toc_base {
    max-height: 90vh;
    /* overflow-y: scroll; */
    padding-right: 24px !important;
    background-color: #343a40 !important; /* Same color as the nav-bar */
    color: rgba(255,255,255,.75);
    position: fixed;
    top: 10vh;
    opacity: 0.95;
}

.toc_full {
    left: 0;
    padding: 32px 8px 32px 8px !important;
    margin: 0;
    transition: all 0.7s ease;
}

.toc_mini {
    left: 0px !important;
    padding: 32px 8px 32px 0px !important;
    margin: 0 !important;
    transition: all 0.7s ease;
}

.toc_entry {
    font-family: 'Roboto Condensed',Georgia,"Times New Roman",Times,sans-serif;
    list-style-type: none;
    padding: 4px;
    margin: 0px;
    cursor: pointer;
    max-width: 500px;
    padding-top: 6px;
    padding-bottom: 6px;
}

.toc_entry:hover {
    color: rgba(255,255,255,1.0);
}

.toc_h_mini {
    padding-left: 0 !important;
}

.toc_h1 {
    font-size: 1.0rem;
    font-weight: bold;
}

.toc_h2 {
    font-size: 1.0rem;
    font-weight: 400;
    padding-left: 1rem;
}

.toc_h3 {
    font-size: 1.0rem;
    padding-left: 2rem;
}

.toc_h4 {
    font-size: 0.8rem;
    padding-left: 3rem;
}

.toc_h5 {
    font-size: 0.8rem;
    padding-left: 3rem;
}

.toc_h6 {
    font-size: 0.8rem;
    padding-left: 3rem;
}

